# qt_unicode_test

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
